5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1635_2445.log
== TEST (2019-04-15 13:31:01) 
-- CODE:


e = int(input("Qual e a escala esta representada(C/F)? "))
t = int(input("Qual e a temperatura? "))

if ( e == "C"):
	f = (9/5 * t) + 32
	print(round( f, 2)
else: 
	c = 5 / 9 * (t- 32)
	print(round( c, 2)
-- ERROR:
File "XXXX", line 9
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:33:09) 
-- CODE:

e = int(input("Qual e a escala esta representada(C/F)? "))
t = int(input("Qual e a temperatura? "))

if ( e == "C"):
	f = (9/5 * t) + 32
	print(round( f, 2)
else: 
	c = 5 / 9 * (t- 32)
	print(round( c, 2)
-- ERROR:
File "XXXX", line 8
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:34:37) 
-- CODE:
e = int(input("Qual e a escala esta representada(C/F)? "))
t = int(input("Qual e a temperatura? "))

if ( e == "C"):
	f = (9/5 * t) + 32
	print(round( f, 2)
else:
	c = 5 / 9 * (t- 32)
	print(round( c, 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:34:47) 
-- CODE:
e = int(input("Qual e a escala esta representada(C/F)? "))
t = int(input("Qual e a temperatura? "))
if ( e == "C"):
	f = (9/5 * t) + 32
	print(round( f, 2)
else:
	c = 5 / 9 * (t- 32)
	print(round( c, 2)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:35:04) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))
if ( e == "C"):
	f = (9/5 * t) + 32
	print(round( f, 2)
else:
	c = 5 / 9 * (t- 32)
	print(round( c, 2)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:35:40) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))
if (e == "C"):
	f = (9/5 * t) + 32
	print(round(f, 2)
else:
	c = (5 / 9) * (t- 32)
	print(round(c, 2)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:35:53) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))
if (e == "C"):
	f = (9/5 * t) + 32
	print(round(f, 2)
else:
	d = (5 / 9) * (t- 32)
	print(round(c, 2)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:37:09) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	f = (9/5 * (t + 32)
	print(round(f, 2)
else:
	c = (5 / 9) * (t- 32)
	print(round(c, 2)
-- ERROR:
File "XXXX", line 6
    print(round(f, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:37:15) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	f = (9/5 * (t + 32)
	print(round(f, 2)
else:
	c = (5 / 9) * (t- 32)
	print(round(c, 2)
-- ERROR:
File "XXXX", line 6
    print(round(f, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:37:42) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (9/5 * (t + 32)
	print(round(F, 2)
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2)
-- ERROR:
File "XXXX", line 6
    print(round(F, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:37:57) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (9/5 * (t + 32)
	print(round(F, 2))
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2))
-- ERROR:
File "XXXX", line 6
    print(round(F, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:18) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (9/5 * (t + 32))
	print(round(F, 2))
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:38:22) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (9/5 * (t + 32))
	print(round(F, 2))
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2))
-- EXECUTION TIME:
0.204226
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:25) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (9/5 * (t + 32))
	print(round(F, 2))
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:38:28) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (9/5 * (t + 32))
	print(round(F, 2))
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2))
-- EXECUTION TIME:
0.188132
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:29) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (9/5 * (t + 32))
	print(round(F, 2))
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:40) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (9/5 * (t + 32))
	print(round(F, 2))
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:39:22) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (1.8 * t) + 32
	print(round(F, 2))
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:39:23) 
-- CODE:
e = input("Qual e a escala esta representada(C/F)? ")
t = int(input("Qual e a temperatura? "))

if (e == "C"):
	F = (1.8 * t) + 32
	print(round(F, 2))
else:
	C = (5 / 9) * (t- 32)
	print(round(C, 2))
-- EXECUTION TIME:
0.149351
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
